[package]
name = "server-sent-events-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix server
actix-web = "4.3.1"
#sse
actix-web-lab = "0.19.1"
parking_lot = "0.12.1"
futures-util = { version = "0.3.27", default-features = false, features = ["std"] }
nanoid = "0.4.0"